--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ test/
 
 # Include exes if they are in the NuGet "packages" directory
 !/packages/*/*/*.exe
+!/packages/*.dll
 !/src/packages/*/*/*.exe
 
 # Exclude diagram files in the root of the src folder
